--- a/index.html
+++ b/index.html
@@ -160,4 +160,9 @@
     }
   </script>
 </body>
+<h5>Hyper Hops is coming soon for the public.
+  It is going to be a Minecraft server which has many easy, medium and hard parkour maps.
+  But it's <b>NOT A BORING GENERIC PARKOUR SERVER</b>. There will be power ups, speed, jump boost, special and custom blocks
+  and many more. Not just this, but also many unique themes which differentiate them.
+things which make it not an ordinary boring map!</h5>>
 </html>
