--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Copy Commands to Clipboard</title>
+  <title>Hyper Hops Cords</title>
   <style>
     /* Basic reset */
     body, html {
@@ -118,6 +118,26 @@
       from {bottom: 30px; opacity: 1;}
       to {bottom: 0; opacity: 0;}
     }
+
+    /* Footer styling */
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+    }
+
+    footer h2, footer h3 {
+      margin: 0;
+      padding: 5px 0;
+    }
+
+    footer p {
+      margin: 10px 0 0;
+    }
   </style>
 </head>
 <body>
@@ -159,10 +179,11 @@
       setTimeout(function(){ toast.className = toast.className.replace("show", ""); }, 3000);
     }
   </script>
-</body>
-<h5>Hyper Hops is coming soon for the public.
-  It is going to be a Minecraft server which has many easy, medium and hard parkour maps.
-  But it's <b>NOT A BORING GENERIC PARKOUR SERVER</b>. There will be power ups, speed, jump boost, special and custom blocks
-  and many more. Not just this, but also many unique themes which differentiate them.
-things which make it not an ordinary boring map!</h5>>
-</html>
+
+  <!-- Footer Section -->
+  <footer>
+    <h2>About Hyper Hops</h2>
+    <h3>Experience Parkour Like Never Before</h3>
+    <p>Hyper Hops is coming soon for the public. It is going to be a Minecraft server featuring numerous easy, medium, and hard parkour maps. But it's <strong>NOT A BORING GENERIC PARKOUR SERVER</strong>. There will be power-ups, speed boosts, jump boosts, special custom blocks,
+::contentReference[oaicite:12]{index=12}
+ 
