--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
   <footer>
     <h2>About Hyper Hops</h2>
     <h3>Experience Parkour Like Never Before</h3>
-    <p>Hyper Hops is coming soon for the public. It is going to be a Minecraft server featuring numerous easy, medium, and hard parkour maps. But it's <strong>NOT A BORING GENERIC PARKOUR SERVER</strong>. There will be power-ups, speed boosts, jump boosts, special custom blocks,
-::contentReference[oaicite:12]{index=12}
+    <p>Hyper Hops is coming soon for the public. It is going to be a Minecraft server featuring numerous easy, medium, and hard parkour maps. But it's <strong>NOT A BORING GENERIC PARKOUR SERVER</strong>. There will be power-ups, speed boosts, jump boosts, special custom blocks, and many more unique features that set it apart from ordinary parkour maps!</p>
+
+::contentReference[oaicite:8]{index=8}
  
