--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       background-color: #333;
       color: #fff;
       text-align: center;
-      padding: 20px;
+      padding: 10px;
       width: 100%;
       position: absolute;
       bottom: 0;
@@ -182,8 +182,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <h2>About Hyper Hops</h2>
-    <h3>Experience Parkour Like Never Before</h3>
+    <h3>About Hyper Hops; Experience Parkour Like Never Before</h3>
     <p>Hyper Hops is coming soon for the public. It is going to be a Minecraft server featuring numerous easy, medium, and hard parkour maps. But it's <strong>NOT A BORING GENERIC PARKOUR SERVER</strong>. There will be power-ups, speed boosts, jump boosts, special custom blocks, and many more unique features that set it apart from ordinary parkour maps!</p>
 
 
