--- a/index.html
+++ b/index.html
@@ -183,6 +183,6 @@
   <!-- Footer Section -->
   <footer>
     <h3>About Hyper Hops; Experience Parkour Like Never Before</h3>
-    <p>Hyper Hops is coming soon for the public. It is going to be a Minecraft server featuring numerous easy, medium, and hard parkour maps. But it's <strong>NOT A BORING GENERIC PARKOUR SERVER</strong>. There will be power-ups, speed boosts, jump boosts, special custom blocks, and many more unique features that set it apart from ordinary parkour maps!</p>
+    <p>Hyper Hops is coming soon for the public. It is going to be a Minecraft server <br>featuring numerous easy, medium, and hard parkour maps. But it's <strong>NOT A BORING GENERIC PARKOUR SERVER</strong>. <br>There will be power-ups, speed boosts, jump boosts, special custom blocks, and <br>many more unique features that set it apart from ordinary parkour maps!</p>
 
 
