--- a/index.html
+++ b/index.html
@@ -124,19 +124,20 @@
       background-color: #333;
       color: #fff;
       text-align: center;
-      padding: 10px;
+      padding: 18px;
       width: 100%;
       position: absolute;
       bottom: 0;
     }
 
-    footer h2, footer h3 {
+    footer h3 {
       margin: 0;
       padding: 5px 0;
     }
 
     footer p {
       margin: 10px 0 0;
+      line-height: 2;
     }
   </style>
 </head>
