--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     #toast {
       visibility: hidden;
       min-width: 250px;
-      background-color: #fff;
+      background-color: #087cfc;
       color: #fff;
       text-align: center;
       border-radius: 2px;
