--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <h3>About Hyper Hops; Experience Parkour Like Never Before</h3>
-    <p>Hyper Hops is coming soon for the public. It is going to be a Minecraft server <br>featuring numerous easy, medium, and hard parkour maps. But it's <strong>NOT A BORING GENERIC PARKOUR SERVER</strong>. <br>There will be power-ups, speed boosts, jump boosts, special custom blocks, and <br>many more unique features that set it apart from ordinary parkour maps!</p>
+    <h3>Phantomix – Enter the mix. Escape the ordinary.</h3>
+    <p>Phantomix is launching soon to the public. It’s a Minecraft server starting with thrilling parkour maps in easy, medium, and hard difficulty — but with a twist. From power-ups and speed boosts to custom blocks and unique mechanics, Phantomix brings a fresh, immersive take on parkour. And that’s just the beginning. More game modes like PvP, minigames, and creative building are on the horizon — all mixed into one unforgettable experience.</p>
 
 
